fix: change white spaces at CSS file according to rule 1.1

--- a/style.css
+++ b/style.css
@@ -1,153 +1,153 @@
 /* Basic Style */
 body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: 'Lato', sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: 'Lato', sans-serif;
 }
 .promo-section {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 .promo-section img {
-    width: 100%;
+  width: 100%;
 }
 .promo-section .more-info {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.promo-section { text-align: center;
-}
+  .promo-section { 
+    text-align: center;
+  }
 }
 .main-wrapper {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
 .new-task-wrapper {
-    display: flex;
+  display: flex;
 }
 .tasks-list {
-    margin:0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 li {
-    list-style:none;
+  list-style:none;
 }
 input,button{
-    outline:none;
+  outline:none;
 }
 button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 button:hover {
-    color: #3a3A3a;
+  color: #3a3A3a;
 }
 /* Heading */
 .title {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
 input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
 input[type="text"]:focus {
-    color: #333;
+  color: #333;
 }
 
 /* New Task */
 .new-task__title {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
 input#new-task {
-    width: 318px;
+  width: 318px;
 }
 .new-task-section > button:hover {
-    color: #0FC57C;
+  color: #0FC57C;
 }
 
 /* Task list */
 li {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 li > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 li > input[type="checkbox"] {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 li > label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
-li >    input[type="text"] {
-    width: 226px
+li > input[type="text"] {
+  width: 226px
 }
 li > button.delete:hover {
-    color: #CF2323;
+  color: #CF2323;
 }
 button.delete img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 button.delete img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .tasks-list#completed-tasks label {
-    text-decoration: line-through
-    color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
 .tasks-list li input[type=text] {
-    display:none
+  display:none
 }
 
 .tasks-list li.edit-mode input[type=text] {
-    display:inline-block;
-    width:224px
+  display:inline-block;
+  width:224px
 }
 
 .tasks-list li.edit-mode label {
-    display:none;
+  display:none;
 }
